force-app/main/default/objects/Contact/fields/B2B_Account_Updates_Notification__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Updates_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Checked, this will send an email alert to this Contact&apos;s Account details get updated:
1. Phone or Email
2. Preferences are updated
3 Preferred Delivery Dates are updated</inlineHelpText>
    <label>Account Updates Notification</label>
    <type>Checkbox</type>
</CustomField>