force-app/main/default/objects/Contact/fields/B2B_See_Commercial_Information__c.field-meta.xml
<CustomField>
    <fullName>B2B_See_Commercial_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Audience in the Storefront</description>
    <inlineHelpText>Allows user to see financial information in the Storefront</inlineHelpText>
    <label>See Commercial Information</label>
    <type>Checkbox</type>
</CustomField>