force-app/main/default/objects/Contact/fields/B2B_Use_Stored_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>B2B_Use_Stored_Credit_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gives access to use Stored Account Credit Cards. Used for Component visibility in the B2B Checkout Flow.</description>
    <inlineHelpText>If checked you allow this User to use Stored Credit Cards to pay for Orders.</inlineHelpText>
    <label>Use Stored Credit Cards</label>
    <type>Checkbox</type>
</CustomField>