force-app/main/default/objects/Contact/fields/Contact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_ID__c</fullName>
    <description>Text field to house the Contact External ID, coming in from AGBOSS.</description>
    <label>Contact External ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>