force-app/main/default/objects/Contact/fields/Grant_Access_To_Grain_Prices__c.field-meta.xml
<CustomField>
    <fullName>Grant_Access_To_Grain_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this contact should have access to the Grain Price Table, used in the Grain Price Controller to control the grain price table visibility on the Grower&apos;s Portal</description>
    <label>Grant Access To Grain Prices</label>
    <type>Checkbox</type>
</CustomField>