force-app/main/default/objects/Contact/recordTypes/B2B_Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>B2B_Customer_Contact</fullName>
    <active>true</active>
    <description>Record Type to be used with B2B Commerce Contacts to represent Buyers</description>
    <label>Customer&apos;s Contact</label>
</RecordType>