force-app/main/default/objects/Contact/recordTypes/Grower_s_Contact.recordType-meta.xml
<RecordType>
    <fullName>Grower_s_Contact</fullName>
    <active>true</active>
    <description>Record Type to be used with Grower&apos;s Portal Contacts to represent Farmers or a Brokers</description>
    <label>Grower&apos;s Contact</label>
</RecordType>